--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     
     <title>Home</title>
 
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./style-index.css"> 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"> </script>
 
 </head>
 <body>
