--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h1>Frase principal / Slogan marca</h1>
             <form class="hero__buttom" action="contacto.html">
                 <label for="Solicitar asesoramiento"></label>
-                <button class="hero__buttom--pointer" a href="contacto.html">Solicitar asesoramiento</a></button>
+                <button class="hero__buttom--pointer btn-contacto" a href="contacto.html">Solicitar asesoramiento</a></button>
             </form>
         </div>
    
@@ -116,7 +116,7 @@
             <h2 class="info__title">Sobre nosotros</h2>
             <form class="info__buttom" action="quienes-somos.html">
                 <label for="Mas sobre nosotros"></label>
-                <button class="hero__buttom--pointer" a href="quienes-somos.html">Mas sobre nosotros</a></button>
+                <button class="hero__buttom--pointer btn-quienes" a href="quienes-somos.html">Mas sobre nosotros</a></button>
             </form>
         </div>
         <span>
