modificacion final SASS SEO

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"> </script>
 
-    <title>Home</title>
+    <title>Home de la web, acceso a servicios brindados y a medios de contacto</title>
 
 </head>
 <body>
@@ -113,7 +113,7 @@
     <section class="info">
 
         <div>
-            <h2 class="info__title">Sobre nosotros</h2>
+            <h3 class="info__title">Sobre nosotros</h3>
             <form class="info__buttom" action="quienes-somos.html">
                 <label for="Mas sobre nosotros"></label>
                 <button class="hero__buttom--pointer btn-quienes" a href="quienes-somos.html">Mas sobre nosotros</a></button>
