--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <title>Home de la web, acceso a servicios brindados y a medios de contacto</title>
 
+    <meta name="description" conten="Asesorate sobre servicios web tales como: Desarrollo Web, Desarrollo de Aplicaciones, Diseño UX/UI o Diseño Gráfico">
+
 </head>
 <body>
     <main>
