--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./style-quienes-somos.css"> <!--forma externa (desde el archivo style.css) - ES LA QUE MAS VAMOS A USAR-->
+    <link rel="stylesheet" href="./style-quienes-somos.min.css"> <!--forma externa (desde el archivo style.css) - ES LA QUE MAS VAMOS A USAR-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"> </script>
     
