--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -10,8 +10,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"> </script>
     
-    <title>Sobre nosotros</title>
+    <title>Sobre nosotros, Misión, Visión y Valores</title>
 
+    <meta name="description" conten="Te contamos mas sobre nosotros, nuesta misión, visión y nuestros valores">
 
 </head>
 <body>
