--- a/servicios.html
+++ b/servicios.html
@@ -10,9 +10,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"> </script>
 
-    <title>Servicios</title>
+    <title>Servicios disponibles! En caso de que no encuentres lo que buscas, no dudes en consultarnos igualmente</title>
 
-    <!-- <link rel="stylesheet" href="./style-servicios.css"> -->
+    <meta name="description" conten="Nos especializamos en Desarrollo Web, Desarrollo de Aplicaciones, Diseño UX/UI y Diseño Grácifo">
 
 
 
@@ -98,9 +98,9 @@
         
         </section>
 
-        <section class="empeza">
+        <section class="contacto">
             <div>
-                <h2>Empezá tu proyecto</h2>
+                <h2 class="contacto-grid__text">Empezá tu proyecto</h2>
                 <form  class="hero__buttom" action="contacto.html">
                     <label for="Solicitar asesoramiento"></label>
                     <button class="hero__buttom--pointer" a href="contacto.html">Solicitar asesoramiento</a></button>
