--- a/casos-de-exito.html
+++ b/casos-de-exito.html
@@ -11,9 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"> </script>
     
     
-    <title>Proyectos</title>
+    <title>Algunos de nuestros proyectos! No dudes en consultar por el tuyo</title>
 
-    <meta name="description" conten="Nos especializamos en Desarrollo Web, Desarrollo de Aplicaciones, Diseño UX/UI y Diseño Grácifo">
+    <meta name="description" conten="Algunos de los proyectos que hemos realizado. Clientes satisfechos. Realizá tu consulta">
 
 </head>
 <body>
@@ -66,7 +66,7 @@
     <!--PRINCIPAL-->
 
         <section class="hero">
-                <h1 class="hero__title-proyect">Casos de éxito</h1>
+                <h1>Casos de éxito</h1>
                 <h2>Conocé algunos de los proyectos que realizamos</h2>
         </section>
 
@@ -83,9 +83,9 @@
             </div>
         </section>
 
-        <section class="empeza">
+        <section class="contacto">
             <div>
-                <h2>Empezá tu proyecto</h2>
+                <h2 class="contacto-grid__text">Empezá tu proyectoo</h2>
                 <form  class="hero__buttom" action="contacto.html">
                     <label for="Solicitar asesoramiento"></label>
                     <button class="hero__buttom--pointer" a href="contacto.html">Solicitar asesoramiento</a></button>
