ajuste responsive proyecto

--- a/casos-de-exito.html
+++ b/casos-de-exito.html
@@ -85,7 +85,7 @@
 
         <section class="contacto">
             <div>
-                <h2 class="contacto-grid__text">Empezá tu proyectoo</h2>
+                <h2 class="contacto-grid__text">Empezá tu proyecto</h2>
                 <form  class="hero__buttom" action="contacto.html">
                     <label for="Solicitar asesoramiento"></label>
                     <button class="hero__buttom--pointer" a href="contacto.html">Solicitar asesoramiento</a></button>
