--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav class="navbar navbar-text navbar-expand-lg navbar-dark bg-black">
               <div class="container-fluid">
 
-                <img src="img/logo.jpg" width="100" alt="Foto">               
+                <img src="img/logo.jpg"  alt="Foto">               
               
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0 collapse navbar-collapse" id="navbarToggleExternalContent">
 
