--- a/contacto.html
+++ b/contacto.html
@@ -97,9 +97,14 @@
             <label class="contacto2-grid__flex" for="pais">País:</label> <!--etiqueta pais-->
             <input class="contacto2-grid__flex" type="text" name="pais" id="pais"> <!--txtbox pais-->
 
-            <label class="contacto2-grid__flex" for="servicio">Tipo de servicio</label> <!--etiqueta tipo-->
-            <input class="contacto2-grid__flex" type="checkbox" name="servicio" id="servicio"> <!--checkbox tipo-->
-        </div>
+            <label class="contacto2-grid__flex" for="servicio">Tipo de servicio:</label> <!--etiqueta tipo-->
+            <select class="contacto2-grid__flex" name="servicio" id="servicio">
+              <OPTION VALUE="programador" SELECTED> Desarrollo Web </OPTION>
+              <OPTION VALUE="diseñador"> Desarrollo App </OPTION>
+              <OPTION VALUE="lider"> Diseño UX/UI </OPTION>
+              <OPTION VALUE="lider"> Diseño Gráfico </OPTION>
+            </SELECT>
+          </div>
         </form>
     </section>
 
